--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@ td.match, th.match { text-align:center; }
   <footer class="site-footer">Limerick GAA Hub · ©2025</footer>
 
   <!-- IMPORTANT: update if you rename the JS file -->
-  <script src="js/app_v7_3_3.js"></script>
-  <script>
+  <script src="./js/app_v7_3_3.js?v=fix3"></script>
+
     // Burger toggle
     (function(){
       const burger=document.getElementById('burger'), oc=document.getElementById('offcanvas'), bd=document.getElementById('oc-backdrop');
