--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@ h1 { margin:0; font-weight:800; font-size:20px; }
 .section-tabs .seg.active { background:var(--accent); color:#fff; border-color:var(--accent); }
 
 /* Competition controls */
-.h-row { display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin:8px 0 12px; }
-.menu-wrap { position:relative; display:inline-block; }
-.trigger { display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border-radius:999px; background:#eaf6ef; border:1px solid #cdebd8; font-weight:800; cursor:pointer; user-select:none; }
-.trigger::after { content:"▾"; font-size:12px; }
-.menu { position:absolute; z-index:40; margin-top:8px; min-width:280px; background:#fff; border:1px solid var(--line); border-radius:12px; box-shadow:0 10px 24px rgba(0,0,0,.08); padding:6px; display:none; }
-.menu.open { display:block; }
-.item { padding:10px 12px; border-radius:10px; cursor:pointer; font-weight:700; }
-.item:hover { background:#f1f9f4; } .item.active { background:var(--accent); color:#fff; }
+<div class="h-row comp-controls">
+  <div class="menu-wrap">
+    <div class="trigger" id="compgroup-trigger" aria-label="Competition">
+      <span id="compgroup-current">—</span>
+      <i class="fa-solid fa-chevron-down" style="font-size:12px; margin-left:6px;"></i>
+    </div>
+    <div class="menu" id="compgroup-menu"></div>
+  </div>
+</div>
+
 
 /* Share bar */
 .sharebar { display:flex; align-items:center; gap:8px; margin:6px 0 10px; }
@@ -68,6 +70,13 @@ td.match, th.match { text-align:center; }
 .match-block { display:grid; grid-template-rows:auto auto auto; row-gap:3px; justify-items:center; }
 .match-team { display:block; line-height:1.2; }
 .match-score { display:block; font-weight:800; font-size:16px; line-height:1.2; }
+
+/* Make the whole Competition pill the trigger (keep your green background) */
+#compgroup-trigger::after { content: none; } /* avoid double arrow since we add our own icon */
+#compgroup-current { font-weight:800; }
+
+/* Slightly smaller score under Match */
+.match-score { font-size:14px; } /* down from 16px */
 
 /* Standings tighter */
 #g-standings-table thead th, #g-standings-table tbody td { padding:10px 8px; font-size:13px; }
