--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ td.match, th.match { text-align:center; }
       <div class="seg vt" data-target="by-date">Date</div>
     </div>
 
-    <!-- Competition pill + dropdown of competitions only -->
+    <!-- Competition pill + dropdown of competition+group pairs -->
     <div class="h-row comp-controls">
       <div class="menu-wrap">
         <div class="trigger" id="comp-trigger" aria-label="Choose competition">
@@ -156,7 +156,7 @@ td.match, th.match { text-align:center; }
     </div>
 
     <div class="panel card" id="group-panel" style="margin-top:6px;">
-      <!-- Selected competition label (full name) -->
+      <!-- Selected competition label (full name + group) -->
       <div class="comp-selected" id="comp-selected"></div>
 
       <div class="section-tabs">
@@ -245,7 +245,7 @@ td.match, th.match { text-align:center; }
   <footer class="site-footer">Limerick GAA Hub · 2025</footer>
 
   <!-- IMPORTANT: update if you rename the JS file -->
-  <script src="./js/app_v7_3_3.js?v=fix5"></script>
+  <script src="./js/app_v7_3_3.js?v=fix6"></script>
   <script>
     // Burger toggle
     (function(){
