--- a/index.html
+++ b/index.html
@@ -2,21 +2,34 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <title>Limerick GAA Hub</title>
 <meta name="color-scheme" content="light only">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 <style>
-:root { --card:#ffffff; --muted:#6b7280; --accent:#00a651; --line:#e9ecef; --text:#111; --bg:#f6f7f8; }
+/* THEME */
+:root {
+  --card:#ffffff; --muted:#6b7280; --accent:#006B3C; /* Limerick green */
+  --accent-2:#88C999; --line:#e9ecef; --text:#111; --bg:#f6f7f8;
+}
 * { box-sizing:border-box; }
-body { margin:70px 20px 20px; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial; background:var(--bg); color:var(--text); -webkit-font-smoothing:antialiased; }
+html { -webkit-text-size-adjust:100%; text-size-adjust:100%; }
+body {
+  margin:70px 20px 20px;
+  font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+  background:var(--bg); color:var(--text);
+  -webkit-font-smoothing:antialiased;
+}
 h1 { margin:0; font-weight:800; font-size:20px; }
 .sm-muted { color:#6b7280; font-size:12px; }
 
 /* Header */
-.header { position:fixed; top:0; left:0; right:0; z-index:100; background:#fff; border-bottom:1px solid var(--line); }
+.header {
+  position:fixed; top:0; left:0; right:0; z-index:100;
+  background:#fff; border-bottom:1px solid var(--line);
+}
+.header::before{ content:""; display:block; height:4px; background:var(--accent); }
 .header-inner { display:flex; align-items:center; justify-content:space-between; gap:12px; padding:10px 16px; max-width:1100px; margin:0 auto; }
-/* brand: make it a link and show favicon image */
 .brand { display:flex; align-items:center; gap:10px; text-decoration:none; color:inherit; }
 .brand img { width:20px; height:20px; }
 .navtabs { display:flex; gap:8px; align-items:center; }
@@ -34,12 +47,15 @@ h1 { margin:0; font-weight:800; font-size:20px; }
 .oc-backdrop.show { opacity:1; pointer-events:auto; }
 
 /* Cards & sections */
-.card { background:#fff; border-radius:18px; box-shadow:0 8px 24px rgba(0,0,0,.05); padding:14px; max-width:1100px; margin:0 auto; }
+.card {
+  background:#fff; border-radius:18px; box-shadow:0 8px 24px rgba(0,0,0,.05);
+  padding:14px; max-width:1100px; margin:0 auto;
+}
 .section-tabs { display:flex; gap:10px; margin:6px 0 12px; flex-wrap:wrap; }
 .section-tabs .seg { padding:9px 14px; border-radius:999px; background:#efefef; cursor:pointer; font-weight:800; border:1px solid transparent; }
 .section-tabs .seg.active { background:var(--accent); color:#fff; border-color:var(--accent); }
 
-/* Competition dropdown (white, anchored to Competition tab) */
+/* Competition dropdown */
 .menu { position:absolute; min-width:280px; background:#fff; border:1px solid var(--line); border-radius:12px; box-shadow:0 8px 28px rgba(0,0,0,.12); padding:6px; display:none; max-height:60vh; overflow:auto; z-index:130; }
 .menu.open { display:block; }
 .menu .item { padding:12px 14px; border-radius:10px; cursor:pointer; font-weight:700; }
@@ -54,20 +70,27 @@ h1 { margin:0; font-weight:800; font-size:20px; }
 .iconbtn { display:inline-flex; align-items:center; justify-content:center; gap:6px; padding:8px 10px; border-radius:10px; border:1px solid var(--line); background:#fff; cursor:pointer; font-weight:700; font-size:13px; }
 .iconbtn i { font-size:14px; }
 
-/* Tables */
-.table-wrap { overflow-x:hidden; border-radius:14px; border:1px solid var(--line); background:#fff; }
-table { width:100%; border-collapse:separate; border-spacing:0; table-layout:auto; }
+/* Tables (hardened) */
+.table-wrap { overflow-x:hidden; border-radius:14px; border:1px solid var(--line); background:#fff; min-width:0; }
+table { width:100%; border-collapse:separate; border-spacing:0; table-layout:fixed; } /* fixed for predictable widths */
 thead th { position:sticky; top:0; background:#f8fafb; border-bottom:1px solid var(--line); font-size:14px; font-weight:800; color:#1f2937; text-align:left; padding:14px; }
-tbody td { padding:14px; border-bottom:1px solid var(--line); font-size:15px; }
+tbody td { padding:14px; border-bottom:1px solid var(--line); font-size:15px; line-height:1.25; word-break:normal; overflow-wrap:anywhere; vertical-align:top; }
 td.right, th.right { text-align:right; }
 tbody tr:nth-child(even) td { background:#fcfcfd; }
 tbody tr:hover td { background:#f1f9f4; }
+
+/* Subtle Limerick identity on rows */
+.table-wrap tbody tr{ position:relative; }
+.table-wrap tbody tr::before{
+  content:""; position:absolute; left:0; top:0; bottom:0; width:3px;
+  background:linear-gradient(var(--accent), var(--accent-2)); opacity:.85;
+}
 
 /* Match block (stacked, centered) */
 td.match, th.match { text-align:center; }
 .match-block { display:grid; grid-template-rows:auto auto auto; row-gap:3px; justify-items:center; }
 .match-team { display:block; line-height:1.2; }
-.match-score { display:block; font-weight:800; font-size:14px; line-height:1.2; }
+.match-score { display:block; font-weight:800; font-size:15px; line-height:1.2; letter-spacing:.2px; }
 
 /* Standings tighter */
 #g-standings-table thead th, #g-standings-table tbody td { padding:10px 8px; font-size:13px; }
@@ -81,6 +104,12 @@ td.match, th.match { text-align:center; }
 .modal .close { margin-left:auto; background:none; border:1px solid var(--line); border-radius:10px; padding:6px 10px; cursor:pointer; }
 
 /* Mobile-only refinements */
+@supports(padding:max(0px)){
+  body{
+    padding-left:max(env(safe-area-inset-left),0);
+    padding-right:max(env(safe-area-inset-right),0);
+  }
+}
 @media (max-width:880px){
   body { margin:60px 10px 10px; }
   .navtabs { display:none; }
@@ -88,20 +117,25 @@ td.match, th.match { text-align:center; }
   .card { padding:12px; }
   thead th, tbody td { padding:10px 7px; font-size:13px; }
   .stcol { display:none; }
-  /* Center Date + Time on mobile */
   th.dcol, td.dcol, th.tcol, td.tcol { text-align:center; }
 }
 
-/* About links */
-#panel-about i { margin-right:6px; color:#444; }
-#panel-about a { margin-right:16px; text-decoration:none; }
-#panel-about a:hover i { color:#0077b5; }
-@media (max-width: 600px){ #panel-about p a { display:block; margin:6px 0; } }
+/* XS breakpoint: keep core columns only */
+@media (max-width:390px){
+  /* Hide first & last columns (works for g-table, team-table, date-table) */
+  #g-table thead th:first-child,    #g-table tbody td:first-child,
+  #team-table thead th:first-child, #team-table tbody td:first-child,
+  #date-table thead th:first-child, #date-table tbody td:first-child,
+  #g-table thead th:last-child,     #g-table tbody td:last-child,
+  #team-table thead th:last-child,  #team-table tbody td:last-child,
+  #date-table thead th:last-child,  #date-table tbody td:last-child { display:none; }
+  thead th, tbody td { padding:.55rem .55rem; }
+}
 
 /* Footer */
 .site-footer { max-width:1100px; margin:16px auto 24px; text-align:center; color:#6b7280; font-size:12px; }
 
-/* Back button (Date view) */
+/* Back button */
 .back-btn { display:inline-flex; align-items:center; gap:6px; margin:8px 0; padding:6px 10px; border:1px solid var(--line); border-radius:999px; background:#f9fafb; cursor:pointer; font-size:13px; color:#333; }
 .back-btn i { font-size:12px; }
 </style>
@@ -117,7 +151,6 @@ td.match, th.match { text-align:center; }
   <!-- Header -->
   <div class="header">
     <div class="header-inner">
-      <!-- Brand links “home” and shows favicon instead of dot -->
       <a href="/" class="brand">
         <img src="/favicon-32x32.png" alt="Logo">
         <h1>Limerick GAA Hub</h1>
@@ -152,7 +185,6 @@ td.match, th.match { text-align:center; }
       <div class="seg vt" data-target="by-team">Team</div>
       <div class="seg vt" data-target="by-date">Date</div>
     </div>
-    <!-- Dropdown root -->
     <div class="menu" id="comp-menu" role="menu" aria-hidden="true"></div>
 
     <div class="panel card" id="group-panel" style="margin-top:6px;">
@@ -202,7 +234,6 @@ td.match, th.match { text-align:center; }
     </div>
 
     <div class="panel card" id="by-date" style="display:none; margin-top:6px;">
-      <!-- Back to Competition button -->
       <button class="back-btn" id="back-to-comp"><i class="fa-solid fa-arrow-left"></i> Back to Competition</button>
       <h2>By Date</h2>
       <div class="controls card">
@@ -292,9 +323,9 @@ td.match, th.match { text-align:center; }
 
     // Brand click = reset to Hurling Competition (no reload)
     document.querySelector('.brand').addEventListener('click', e=>{
-      e.preventDefault(); // stop full reload
-      document.querySelector('.navtab[data-nav="hurling"]').click(); // show Hurling
-      document.querySelector('#view-tabs .vt[data-target="group-panel"]').click(); // show Competition
+      e.preventDefault();
+      document.querySelector('.navtab[data-nav="hurling"]').click();
+      document.querySelector('#view-tabs .vt[data-target="group-panel"]').click();
     });
 
     // Show warning if JS didn't set the ready flag
@@ -304,6 +335,14 @@ td.match, th.match { text-align:center; }
         console.warn('App not ready. Check JavaScript path and console for errors.');
       }
     });
+
+    // Small Android nicety: blur selects after change so dropdown closes
+    (function(){
+      ['team','status','date-jump'].forEach(id=>{
+        const el=document.getElementById(id);
+        if(el){ el.addEventListener('change',()=>el.blur()); }
+      });
+    })();
   </script>
 </body>
 </html>
